@@ -131,7 +131,7 @@ class FlickrPhotoList(base.PhotoList):
                     'target'     : (self.target, argument),
                     'url'        : str(url),
                     'owner_name' : s['ownername'],
-                    'owner'      : s['owner'],
+                    'owner'      : s['owner'], # nsid
                     'id'         : s['id'],
                     'title'      : s['title'],
                     'page_url'   : page_url,
@@ -170,6 +170,11 @@ class FlickrPhoto(base.Photo):
         url = self.get(type) or self.get('url_z') or self.get('url') 
         # print type, url
         return url
+
+    def is_my_photo(self):
+        user_name = self.conf.get_string('plugins/flickr/user_name')
+        result = user_name and user_name == self['owner_name']
+        return result
 
 class FlickrFav(object):
 
