@@ -1,5 +1,7 @@
 2011-01-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* base/base.py, actor/info.py: Added support for changing zoom
+	  level for map.
 	* constants.py: Added checking for user directory permissions.
 
 2011-01-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
